api/swim_schema/src/schema/tests/derive/validated_form/nothing_attr_on_field.stderr
error: StandardSchema::Nothing is not permitted on fields
  --> $DIR/nothing_attr_on_field.rs:20:23
   |
20 |         #[form(schema(nothing))]
   |                       ^^^^^^^
